--- a/res/layout/toolbar.xml
+++ b/res/layout/toolbar.xml
@@ -2,7 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
+	android:layout_height="wrap_content"
 	android:orientation="horizontal">
 
 	<ImageButton
@@ -33,7 +33,8 @@
 			android:layout_width="wrap_content"
 			android:text="@string/app_name"
 			android:layout_toRightOf="@id/logo"
-			android:id="@+id/title"/>
+			android:id="@+id/title"
+			android:singleLine="true"/>
 
 		<TextView
 			android:layout_height="wrap_content"
@@ -42,7 +43,8 @@
 			android:layout_toRightOf="@id/logo"
 			android:layout_alignParentBottom="true"
 			android:id="@+id/subtitle"
-			android:layout_gravity="bottom"/>
+			android:layout_gravity="bottom"
+			android:singleLine="true"/>
 
 	</FrameLayout>
 
